// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph build Graph: graph 1`] = `
Array [
  "a-> e",
  "b-> a",
  "d-> a",
  "e-> a",
  "e-> b",
]
`;

exports[`Graph build Graph: graph-final 1`] = `
Array [
  "a-> e",
  "b-> a",
  "d-> a",
  "e-> a",
  "e-> b",
]
`;

exports[`Graph get SubGraph: graph 1`] = `
Array [
  "d-> a",
  "e-> a",
  "e-> b",
  "f-> b",
  "g-> b",
  "h-> c",
  "i-> e",
  "j-> g",
  "j-> h",
]
`;

exports[`Graph get SubGraph: graph-final 1`] = `
Array [
  "d-> a",
  "e-> a",
  "e-> b",
  "f-> b",
  "g-> b",
  "h-> c",
  "i-> e",
  "j-> g",
  "j-> h",
]
`;

exports[`Graph get SubGraph: sub-final 1`] = `
Array [
  Array [
    "a",
    "d",
    "e",
    "i",
  ],
  Array [
    "b",
    "e",
    "i",
    "f",
    "g",
    "j",
  ],
  Array [
    "c",
    "h",
    "j",
  ],
]
`;
